--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Practica 01 con Phaser</title>
-    <script src="../node_modules/phaser/dist/phaser.min.js"></script>
+    <title>Practica 04 con Phaser</title>
+    <!-- <script src="../node_modules/phaser/dist/phaser.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.52.0/phaser.min.js"></script>
     <script src="./src/main.js" type="module"></script>
 </head>
 <body>
